Provisioning/Vault/manifests/vault-secrets-operator/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tls-app
  namespace: tenant-1
  labels:
    app: tls-app
spec:
  containers:
  - command:
    - /agnhost
    - netexec
    - --http-port
    - "8080"
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: tls-app
