Provisioning/Vault/manifests/vault-secrets-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: tenant-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - localhost
    secretName: pki-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /tls-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tls-app-service
            port:
              number: 443
